# modaq_upload

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  app.py  biome.json  install_desktop.py  jsconfig.json  launch.py  modaq-upload.desktop.template  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  settings.default.json  settings.test.json  setup-mount-permissions.sh  vitest.config.js  wsgi.py
.github/: copilot-instructions.md
.github/workflows/: run_tests.yml
app/: __init__.py  config.py
app/routes/: __init__.py  delete.py  files.py  large_folder_upload.py  logs.py  main.py  settings.py  upload.py
app/services/: __init__.py  batch_processor.py  cache_service.py  delete_manager.py  file_service.py  job_models.py  job_storage.py  log_service.py  mcap_service.py  s3_service.py  sse_manager.py  upload_manager.py  utils.py
app/templates/: base.html  files.html  index.html  logs.html  macros.html  settings.html
deploy/: install.py  modaq-upload.service  uninstall.py
docs/: ARCHITECTURE.md
frontend/: .gitignore  biome.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: setup.ts
tests/: __init__.py  conftest.py  test_cache_service.py  test_config.py  test_job_storage_integration.py  test_log_service.py  test_mcap_service.py  test_routes.py  test_s3_service.py  test_sse_infrastructure.py  test_upload_manager.py
tests/js/: file-browser.test.js  logs.test.js  settings.test.js  state.test.js  (+4 more)
(+115 files in other folders)
